@@ -15,6 +15,8 @@
 - gtk-doc for mosaicing
 - add im_fits2vips() to the operation database
 - im_fits2vips() is lazy and much faster
+- im__file_open_write() / _read() has a flag for text_mode, get rid of all the 
+  remaining fopen()s
 
 30/11/10 started 7.24.0
 - bump for new stable
